# ml-cookbook-project

./: .gitignore  Makefile  README.md  cookbook.md  mcp-playbook.md  pyproject.toml  train.py
.github/: copilot-instructions.md
.github/agents/: code-review.agent.md  dependency-upgrade.agent.md  docs-writer.agent.md  experiment-setup.agent.md  performance-profiler.agent.md  test-triage.agent.md
.github/workflows/: ci.yml
configs/: default.yaml
mcp-examples/: context7.md
src/ml_cookbook/: __init__.py  train.py
src/ml_cookbook/data/: __init__.py  dummy_datamodule.py
src/ml_cookbook/models/: __init__.py  prototype_model.py
src/ml_cookbook/utils/: __init__.py
tests/: test_shapes.py  test_train_smoke.py
